nullaway_error_735608b5-2c12-4cbb-a92c-cd9d4d076fea.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/graphics/emitters/particles/Particle.java:110: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return this.color;
    ^
    (see http://t.uber.com/nullaway )
